--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,13 +10,13 @@
    "devDependencies": {
       "@types/bun": "latest",
       "@types/express": "^5.0.5",
-      "prisma": "^7.0.1"
+      "prisma": "5.22.0"
    },
    "peerDependencies": {
       "typescript": "^5"
    },
    "dependencies": {
-      "@prisma/client": "^7.0.1",
+      "@prisma/client": "5.22.0",
       "dotenv": "^17.2.3",
       "express": "^5.1.0",
       "openai": "^6.9.1",
