--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,6 +17,7 @@
    },
    "dependencies": {
       "@prisma/client": "5.22.0",
+      "dayjs": "^1.11.19",
       "dotenv": "^17.2.3",
       "express": "^5.1.0",
       "openai": "^6.9.1",
