--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,6 +16,7 @@
       "typescript": "^5"
    },
    "dependencies": {
+      "@huggingface/inference": "^4.13.4",
       "@prisma/client": "5.22.0",
       "dayjs": "^1.11.19",
       "dotenv": "^17.2.3",
